--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^11.18.6",
-    "react-redux": "^8.0.4"
+    "react-redux": "^8.0.4",
+    "react-rnd": "^10.3.7"
   },
   "devDependencies": {
     "@types/node": "18.8.3",
